--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
             font-size: 1em;
             cursor: pointer;
             position: absolute;
-            top: 145px;
-            left: 300px;
+            top: 113px;
+            left: 350px;
+            transform: translateY(-50%);
         }
 
         /* Settings Modal Styles */
