--- a/index.html
+++ b/index.html
@@ -4,145 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            transition: background-color 0.5s, color 0.5s;
-        }
-
-        .container {
-            text-align: center;
-            position: relative;
-        }
-
-        h1 {
-            font-size: 5em;
-        }
-
-        .toggle-switch {
-            display: inline-block;
-            position: absolute;
-            top: 115px;
-            left: 305px;
-            width: 40px;  /* Decreased width */
-            height: 20px; /* Decreased height */
-            transform: translateY(-50%);
-        }
-
-        .toggle-switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            transition: .1s;
-            border-radius: 9px; /* Adjusted border-radius */
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 2px; /* Adjusted padding */
-            box-sizing: border-box;
-        }
-        
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 14px; /* Decreased height */
-            width: 10px; /* Decreased width */
-            background-color: white;
-            transition: .4s;
-            border-radius: 50%;
-        }
-
-        input:checked + .slider {
-            background-color: #2196F3;
-        }
-
-        input:focus + .slider {
-            box-shadow: 0 0 1px #2196F3;
-        }
-
-        input:checked + .slider:before {
-            transform: translateX(26px);
-        }
-
-        /* Emoji Icon for Settings */
-        #settings-icon {
-            font-size: 1em;
-            cursor: pointer;
-            position: absolute;
-            top: 113px;
-            left: 350px;
-            transform: translateY(-50%);
-        }
-
-        /* Settings Modal Styles */
-        #settings-modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            align-items: center;
-            justify-content: center;
-        }
-
-        .modal-content {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        select {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-        }
-
-        #save-btn {
-            background-color: #2196F3;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #save-btn:hover {
-            background-color: #0b7dda;
-        }
-
-        .hidden-text {
-            opacity: 0;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-    </style>
     <title>Togglable Clock Format</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -181,59 +47,7 @@
         </div>
     </div>
 
-    <script>
-        function openSettingsModal() {
-            document.getElementById('settings-modal').style.display = 'flex';
-        }
-
-        function saveSettings() {
-            const clockElement = document.getElementById('clock');
-            const backgroundColorSelect = document.getElementById('background-color');
-            const fontColorSelect = document.getElementById('font-color');
-
-            const selectedBackgroundColor = backgroundColorSelect.value;
-            const selectedFontColor = fontColorSelect.value;
-
-            // Apply selected colors to the body and clock
-            document.body.style.backgroundColor = selectedBackgroundColor;
-            document.body.style.color = selectedFontColor;
-            clockElement.style.color = selectedFontColor;
-
-            // Close the settings modal
-            document.getElementById('settings-modal').style.display = 'none';
-        }
-
-        let is24HourFormat = true; // Default to 24-hour format
-
-        function clock() {
-            const now = new Date();
-            let hours = now.getHours();
-            let minutes = now.getMinutes();
-            let seconds = now.getSeconds();
-
-            if (!is24HourFormat) {
-                // Convert to 12-hour format
-                hours = hours % 12;
-                hours = hours ? hours : 12; // the hour '0' should be '12'
-            }
-
-            // Format the time to display two digits
-            hours = hours < 10 ? '0' + hours : hours;
-            minutes = minutes < 10 ? '0' + minutes : minutes;
-            seconds = seconds < 10 ? '0' + seconds : seconds;
-
-            const timeString = `${hours}:${minutes}:${seconds}`;
-            const ampm = now.getHours() >= 12 ? '' : '';
-            document.getElementById('clock').innerHTML = is24HourFormat ? timeString : timeString + ' ' + ampm;
-        }
-
-        setInterval(clock, 1000);
-
-        // Toggle button functionality
-        document.getElementById('formatToggle').addEventListener('change', function () {
-            is24HourFormat = !is24HourFormat;
-        });
-    </script>
+<script src="script.js"></script>
 
 </body>
 
